--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@ font-weight: 600;
   }
 .divmodal{
   display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
   position: absolute;
